crates/reinhardt-core/macros/tests/ui/settings/fail/composition_duplicate_fields.rs
use reinhardt_macros::settings;

#[settings(db: Foo | db: Bar)]
pub struct BadSettings;

fn main() {}
