crates/reinhardt-core/macros/tests/ui/settings/fail/composition_duplicate_fields.stderr
error: Duplicate field name `db`.
 --> tests/ui/settings/fail/composition_duplicate_fields.rs:3:1
  |
3 | #[settings(db: Foo | db: Bar)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `settings` (in Nightly builds, run with -Z macro-backtrace for more info)
